<resources>
    <string name="app_name">MossRock</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="kitchen">Kitchen</string>
    <string name="entry">Entry</string>
    <string name="nuutti">Nuutti</string>
    <string name="viggo">Viggo</string>
    <string name="hallway">Hallway</string>
    <string name="venni">Venni</string>
    <string name="balcony">Balcony</string>
    <string name="library">Library</string>
    <string name="bedroom">Bedroom</string>
    <string name="all_on">All On</string>
    <string name="all_off">All Off</string>
    <string name="movie">Movie</string>
    <string name="tv">TV \u23FB</string>
    <string name="venom">Venom</string>
    <string name="wii">Wii</string>
    <string name="ps4">PS4</string>
    <string name="steam">Steam</string>
    <string name="volume">Volume</string>
</resources>
