<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".MossRockActivity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/toggle_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rowCount="9"
        app:columnCount="3"
        app:alignmentMode="alignBounds">

        <ToggleButton
            android:id="@+id/kitchen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_on"
            android:padding="12dp"
            android:text="@string/kitchen"
            android:textOff="@string/kitchen"
            android:textOn="@string/kitchen"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_rowSpan="2"
            app:layout_columnSpan="1"/>

        <ToggleButton
            android:id="@+id/entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_on"
            android:text="@string/entry"
            android:textOff="@string/entry"
            android:textOn="@string/entry"
            android:textSize="36sp"
            app:layout_column="1"
            app:layout_row="0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_rowSpan="2"
            app:layout_columnSpan="1"/>

        <ToggleButton
            android:id="@+id/nuutti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_on"
            android:text="@string/nuutti"
            android:textOff="@string/nuutti"
            android:textOn="@string/nuutti"
            android:textSize="36sp"
            app:layout_column="2"
            app:layout_row="0"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_rowWeight="1"
            app:layout_rowSpan="1"
            app:layout_columnSpan="1"/>

        <SeekBar
            android:id="@+id/nuutti_dim"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="14"
            android:progress="3"
            app:layout_column="2"
            app:layout_row="1"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_rowWeight="1"
            app:layout_rowSpan="1"
            app:layout_columnSpan="1"/>

        <ToggleButton
            android:id="@+id/viggo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_on"
            android:text="@string/viggo"
            android:textOff="@string/viggo"
            android:textOn="@string/viggo"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="2"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_rowSpan="1"
            app:layout_columnSpan="1"/>

        <SeekBar
            android:id="@+id/viggo_dim"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="14"
            android:progress="3"
            app:layout_column="0"
            app:layout_row="3"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_rowWeight="1"
            app:layout_rowSpan="1"
            app:layout_columnSpan="1"/>

        <ToggleButton
            android:id="@+id/hallway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_on"
            android:text="@string/hallway"
            android:textOff="@string/hallway"
            android:textOn="@string/hallway"
            android:textSize="36sp"
            app:layout_column="1"
            app:layout_row="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_rowSpan="2"
            app:layout_columnSpan="1"/>

        <ToggleButton
            android:id="@+id/venni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_on"
            android:text="@string/venni"
            android:textOff="@string/venni"
            android:textOn="@string/venni"
            android:textSize="36sp"
            app:layout_column="2"
            app:layout_row="2"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_rowWeight="1"
            app:layout_rowSpan="1"
            app:layout_columnSpan="1"/>


        <SeekBar
            android:id="@+id/venni_dim"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="14"
            android:progress="3"
            app:layout_column="2"
            app:layout_row="3"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_rowWeight="1"
            app:layout_rowSpan="1"
            app:layout_columnSpan="1"/>

        <ToggleButton
            android:id="@+id/balcony"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_on"
            android:text="@string/balcony"
            android:textOff="@string/balcony"
            android:textOn="@string/balcony"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="4"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_rowWeight="1"
            app:layout_rowSpan="1"
            app:layout_columnSpan="1"/>


        <SeekBar
            android:id="@+id/balcony_dim"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="14"
            android:progress="3"
            app:layout_column="0"
            app:layout_row="5"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_rowWeight="1"
            app:layout_rowSpan="1"
            app:layout_columnSpan="1"/>

        <ToggleButton
            android:id="@+id/library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_on"
            android:text="@string/library"
            android:textOff="@string/library"
            android:textOn="@string/library"
            android:textSize="36sp"
            app:layout_column="1"
            app:layout_row="4"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_rowWeight="1"
            app:layout_rowSpan="1"
            app:layout_columnSpan="1"/>

        <SeekBar
            android:id="@+id/library_dim"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="14"
            android:progress="3"
            app:layout_column="1"
            app:layout_row="5"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_rowWeight="1"
            app:layout_rowSpan="1"
            app:layout_columnSpan="1"/>

        <ToggleButton
            android:id="@+id/bedroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_on"
            android:text="@string/bedroom"
            android:textOff="@string/bedroom"
            android:textOn="@string/bedroom"
            android:textSize="36sp"
            app:layout_column="2"
            app:layout_row="4"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_rowSpan="2"
            app:layout_columnSpan="1"/>

        <android.support.v7.widget.GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_columnSpan="3"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:rowCount="3"
            app:columnCount="4"
            app:layout_row="6"
            app:layout_rowWeight="3">

            <Button
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border_on"
                android:drawableRight="@drawable/ic_power"
                android:paddingRight="30dp"
                android:text="@string/tv"
                android:textSize="30sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="fill_horizontal|fill_vertical"
                app:layout_column="0"
                app:layout_row="0"/>

            <Button
                android:id="@+id/all_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border_on"
                android:text="@string/all_on"
                android:textSize="30sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="fill_horizontal|fill_vertical"
                app:layout_column="1"
                app:layout_row="0"/>

            <Button
                android:id="@+id/all_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border_on"
                android:text="@string/all_off"
                android:textSize="30sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="fill_horizontal|fill_vertical"
                app:layout_column="2"
                app:layout_row="0"/>

            <Button
                android:id="@+id/movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border_on"
                android:text="@string/movie"
                android:textSize="30sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="fill_horizontal|fill_vertical"
                app:layout_column="3"
                app:layout_row="0"
                 />

            <ToggleButton
                android:id="@+id/venom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border_on"
                android:text="@string/venom"
                android:textOff="@string/venom"
                android:textOn="@string/venom"
                android:textSize="30sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="fill_horizontal|fill_vertical"
                app:layout_column="0"
                app:layout_row="1"/>

            <ToggleButton
                android:id="@+id/wii"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border_on"
                android:text="@string/wii"
                android:textOff="@string/wii"
                android:textOn="@string/wii"
                android:textSize="30sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="fill_horizontal|fill_vertical"
                app:layout_column="1"
                app:layout_row="1"/>

            <ToggleButton
                android:id="@+id/ps4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border_on"
                android:text="@string/ps4"
                android:textOff="@string/ps4"
                android:textOn="@string/ps4"
                android:textSize="30sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="fill_horizontal|fill_vertical"
                app:layout_column="2"
                app:layout_row="1"/>

            <ToggleButton
                android:id="@+id/steam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border_on"
                android:textSize="30sp"
                android:text="@string/steam"
                android:textOff="@string/steam"
                android:textOn="@string/steam"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="fill_horizontal|fill_vertical"
                app:layout_column="3"
                app:layout_row="1"/>

            <SeekBar
                android:id="@+id/volume"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="4"
                app:layout_column="0"
                app:layout_row="2"
                app:layout_gravity="fill_horizontal|fill_vertical"
                app:layout_rowWeight="1"
                app:layout_rowSpan="1"
                app:layout_columnSpan="4"/>

        </android.support.v7.widget.GridLayout>
    </android.support.v7.widget.GridLayout>
</FrameLayout>